﻿===== Smarty 3.2-DEV  =====
03.12.2012
- complete rewrite of config file processing
- moved shared code for config variable loading out of compiled config files

30.11.2012
- fixed code for template inheritance
- fixed PHPunit extends resource templates
- fixed cached variables at nocache plugins

29.11.2012
- first update after massive internal changes (not yet full functional)
- lexer did fail because wrong properties
- fixed a couple of PHPunit errors
- some code fixes
- fixed code for compiling {eval}
- fixed code on modifier


- add {block 'foo' overwrite} option to overwrite {$smarty.block.child} (Forum Topic 22905)

23.08.2012
- add whitespace control by tag also for comments

02.05.2012
- make registerFilter() and registerPlugin() accept __invoke()-able objects
- add Smarty_Internal_Data::assignParents() for quickly assigning data to the whole template hierarchy

01.05.2012
- bugfix type-hint for Smarty or template object did not work while compiling plugins
- new $template->is_nocache and {$smarty.is_nocache} flag true while executing nocache code
- add Smarty::registerCallback()
- make registerFilter() and registerPlugin() accept closures

30.04.2012
- bugfix output filter should not run before cache file written with nocache code
- add assignCached() and getCachedVars() to access cached-template value storage

30.03.2012
- implement new subfolder structure for cache files using a cache_id hash (Forum Topic 21143 and other)

27.03.2012
- bugfix whitespace control

12.03.2012
- add whitespace control by tag (Forum Topic 20064)

04.03.2012
- moved code into classes it better belongs to
- prefix core functions called from compiled templates with '_'
- update PHPunit tests
- remove trailing ?> from Smarty source and format code
- moved deprecated register object functions into SmartyBC
- fixed Namespace support

10.12.2011
- major change:
  * template variable values and its properties are stored as array in the template variable container