@@ -91,8 +91,8 @@ class SmartyTests extends PHPUnit_Framework_TestSuite {
             // Older versions of PHPUnit did not have this function,
             // which is used when determining which PHP files are
             // included in the PHPUnit code coverage result.
-            PHPUnit_Util_Filter::addDirectoryToWhitelist($smarty_libs_dir);
-            PHPUnit_Util_Filter::removeDirectoryFromWhitelist('./');
+            //PHPUnit_Util_Filter::addDirectoryToWhitelist($smarty_libs_dir);
+            //PHPUnit_Util_Filter::removeDirectoryFromWhitelist('./');
             // PHPUnit_Util_Filter::addDirectoryToWhitelist('../libs/plugins');
         }
         $suite = new self('Smarty 3 - Unit Tests Report');
