@@ -308,122 +308,5 @@ class Smarty_Internal_Code {
         }
         return;
     }
-
-    /**
-     * Create code frame for compiled and cached templates
-     *
-     * @param Smarty_Internal_Template $_template   template object
-     * @param string $content   optional template content
-     * @param bool   $cache     flag for cache file
-     * @param bool   $noinstance     flag if code for creating instance shall be suppressed
-     * @return string
-     */
-    public function createTemplateCodeFrame(Smarty_Internal_Template $_template, $content = null, $cache = false, $noinstance = false) {
-        if ($content == null) {
-            $content = $this->buffer;
-            $this->buffer = '';
-        }
-        $this->indentation = 0;
-        // content class name
-        $class = ($cache || $_template->is_config) ? '__Smarty_Content_' . str_replace('.', '_', uniqid('', true)) : $_template->compiler->content_class;
-        if ($cache || $_template->is_config) {
-            $this->raw("<?php\n");
-        }
-        $this->php("if (!class_exists('{$class}',false)) {\n")->indent()->php("class {$class} extends Smarty_Internal_Content {\n")->indent();
-        $this->php("public \$version = '" . Smarty::SMARTY_VERSION . "';\n");
-        $this->php("public \$has_nocache_code = " . ($_template->has_nocache_code ? 'true' : 'false') . ";\n");
-        if (!empty($_template->cached_subtemplates)) {
-            $this->php("public \$cached_subtemplates = ")->repr($_template->cached_subtemplates)->raw(";\n");
-        }
-        if ($cache) {
-            $this->php("public \$is_cache = true;\n");
-            $this->php("public \$cache_lifetime = {$_template->cache_lifetime};\n");
-            $this->php("public \$file_dependency = ")->repr($_template->cached->file_dependency)->raw(";\n");
-            if (!empty($_template->cached->required_plugins)) {
-                $this->php("public \$required_plugins = ")->repr($_template->cached->required_plugins)->raw(";\n");
-            }
-            if (!empty($_template->cached->template_functions)) {
-                $this->php("public \$template_functions = ")->repr($_template->cached->template_functions)->raw(";\n");
-            }
-            $_template->cached->template_functions = array();
-        } else {
-            if (!$noinstance) {
-                $this->php("public \$file_dependency = ")->repr($_template->compiler->file_dependency)->raw(";\n");
-            }
-            if (!$_template->is_config) {
-            if (!empty($_template->compiler->required_plugins['compiled'])) {
-                $plugins = array();
-                foreach ($_template->compiler->required_plugins['compiled'] as $tmp) {
-                    foreach ($tmp as $data) {
-                        $plugins[$data['file']] = $data['function'];
-                    }
-                }
-                $this->php("public \$required_plugins = ")->repr($plugins)->raw(";\n");
-            }
-
-            if (!empty($_template->compiler->required_plugins['nocache'])) {
-                $plugins = array();
-                foreach ($_template->compiler->required_plugins['nocache'] as $tmp) {
-                    foreach ($tmp as $data) {
-                        $plugins[$data['file']] = $data['function'];
-                    }
-                }
-                $this->php("public \$required_plugins_nocache = ")->repr($plugins)->raw(";\n");
-            }
-
-            if (!empty($_template->compiler->template_functions)) {
-                $this->php("public \$template_functions = ")->repr($_template->compiler->template_functions)->raw(";\n");
-            }
-            if (!empty($_template->compiler->called_nocache_template_functions)) {
-                $this->php("public \$called_nocache_template_functions = ")->repr($_template->compiler->called_nocache_template_functions)->raw(";\n");
-            }
-            if (!empty($_template->compiler->block_functions)) {
-                $this->php("public \$block_functions = ")->repr($_template->compiler->block_functions)->raw(";\n");
-            }
-            }
-        }
-        $this->php("function get_template_content (\$_smarty_tpl) {\n")->indent();
-        if (!$_template->is_config) {
-        $this->php("ob_start();\n");
-        }
-        $this->buffer .= $content;
-        $content = '';
-        if (!$_template->is_config) {
-        if (isset($_template->compiler->extends_resource_name)) {
-            $this->buffer .= $_template->compiler->extends_resource_name;
-        }
-        $this->php("return ob_get_clean();\n");
-        }
-        $this->outdent()->php("}\n");
-        if ($cache) {
-            foreach ($_template->cached->template_functions_code as $code) {
-                $this->buffer .= "\n" . $code;
-            }
-            $_template->cached->template_functions_code = array();
-        } elseif (!$_template->is_config) {
-            foreach ($_template->compiler->template_functions_code as $code) {
-                $this->buffer .= "\n" . $code;
-            }
-            foreach ($_template->compiler->block_functions_code as $code) {
-                $this->buffer .= "\n" . $code;
-            }
-        }
-        $this->outdent()->php("}\n")->outdent()->php("}\n");
-        if (!$noinstance) {
-            if ($cache) {
-                $this->php("\$_template->cached->smarty_content = new $class(\$_template);\n\n");
-            } elseif ($_template->is_config) {
-                 $this->php("\$this->smarty_content = new $class(\$_template);\n\n");
-            } else {
-                $this->php("\$_template->compiled->smarty_content = new $class(\$_template);\n\n");
-                foreach (Smarty_Internal_TemplateCompilerBase::$merged_inline_templates as $key => $inline_template) {
-                    $this->buffer .= "\n" . $inline_template['code'];
-                    unset(Smarty_Internal_TemplateCompilerBase::$merged_inline_templates[$key], $inline_template);
-                }
-            }
-        }
-        return $this->buffer;
-    }
-
 }
 
