@@ -2,6 +2,7 @@
 03.12.2012
 - complete rewrite of config file processing
 - moved shared code for config variable loading out of compiled config files
+- rewrite code to create Smarty content class
 
 30.11.2012
 - fixed code for template inheritance
